stringsDemo.txt
elbon@kuwak:~$ python3
Python 3.6.9 (default, Oct  8 2020, 12:12:24) 
[GCC 8.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> some_string = 'Hello world'
>>> print('Testing a string')
Testing a string
>>> print('-'*20)
--------------------
>>> print('some_string', some string)
  File "<stdin>", line 1
    print('some_string', some string)
                                   ^
SyntaxError: invalid syntax
>>> print('some_string', some_string)
some_string Hello world
>>> print("some_string.startswith('H')", some_string.startswith('H'))
some_string.startswith('H') True
>>> print("some_string.startswith('h')", some_string.startswith('h'))
some_string.startswith('h') False
>>> print("some_string.startswith('x')", some_string.startswith('x'))
some_string.startswith('x') False
>>> some_string.endswith("d")
True
>>> print('some_string.endswith('d')
  File "<stdin>", line 1
    print('some_string.endswith('d')
                                 ^
SyntaxError: invalid syntax
>>> print('some_string.endswith('s"))
  File "<stdin>", line 1
    print('some_string.endswith('s"))
                                 ^
SyntaxError: invalid syntax
>>> print(some_string.endswith("x"))
False
>>> x1 = Elbon
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Elbon' is not defined
>>> x1 = 'elbon'
>>> x1.upper()
'ELBON'
>>> x1.upper[2:4]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> print("some_string.istitle()", some_string.istitle())
some_string.istitle() False
>>> print('some_string.isupper()', some_string.isupper())
some_string.isupper() False
>>> print('some_string.isalpha()', some_string.isalpha)
some_string.isalpha() <built-in method isalpha of str object at 0x7f4154b13df0>
>>> print('some_string.isalpha()', some_string.isalpha())
some_string.isalpha() False
>>> print('String conversions')
String conversions
>>> print('-' * 20)
--------------------
>>> print('some_string.upper()', some_string.upper())
some_string.upper() HELLO WORLD
>>> print('some_string.upper(), ": ", some_string.upper())
  File "<stdin>", line 1
    print('some_string.upper(), ": ", some_string.upper())
                                                         ^
SyntaxError: EOL while scanning string literal
>>> print('some_string.upper()', ': ', some_string())
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object is not callable
>>> print('some_string.lower()', some_string.lower())
some_string.lower() hello world
>>> print('some_string.lower: ', some_string.lower())
some_string.lower:  hello world
>>> print('some_string.title(): ', some_string.title())
some_string.title():  Hello World
>>> print('some_string.swapcase(): ', some_string.swapcase())
some_string.swapcase():  hELLO WORLD
>>> print('String leadin, trailing spaces', "      xyz      ".strip())
String leadin, trailing spaces xyz
>>> some_string.lower().startswith('h')
True
>>> some_string.startswith('H')
True
>>> someeeeeeee
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'someeeeeeee' is not defined
>>> some_string.upper()
'HELLO WORLD'
>>> some_string.startswith('G')
False
>>> some_string.endswith("D")
False
>>> 

